--- a/book/appendix.adoc
+++ b/book/appendix.adoc
@@ -1,21 +1,18 @@
 == 附录
 
-=== 游戏机制
-
+.游戏机制
 - 官方 Wiki：
   http://wiki.wargaming.net/en/World_of_Tanks
 - 官方 YouTube 频道：
   http://youtube.com/user/WorldOfTanksCom/
 
-=== 更新日志
-
+.更新日志
 - 亚太服务器官方网站的繁体中文版更新日志汇总：
   http://worldoftanks.asia/zh-tw/content/release_notes/
 - 官方 Wiki 的更新日志汇总：
-  http://wiki.wargaming.net/en/Changelogs_for_World_of_Tanks_(PC)
+  link:++http://wiki.wargaming.net/en/Changelogs_for_World_of_Tanks_(PC)++[]
 
-=== 游戏数据
-
+.游戏数据
 * 装甲密档： http://tankinspector.sinaapp.com/
 
 * 安卓 WoT 知识库： https://play.google.com/store/apps/details?id=com.enigmapro.wot.knowlege&hl=en
