--- a/book/shooting.adoc
+++ b/book/shooting.adoc
@@ -94,6 +94,9 @@
 具体要等落弹环缩到什么程度才射击？
 这里我无法给出一个统一的标准。
 但是我也不想说“打得多了就有手感了”这种经验主义的方针。
+一般来说，
+当落弹环已经圈住的目标装甲都是易于击穿的，
+就可以马上开炮了。
 
 === 自动瞄准
 
@@ -122,4 +125,6 @@
 而不是在装填好之后再花额外的时间去瞄准。
 
 每一辆坦克的主炮实际的瞄准时间都可能有所不同。
-这需要你熟悉游戏的瞄准机制。
+虽然理论上我们可以通过坦克的移动扩圈和瞄准速度来计算瞄准所需的时间，
+但实际上玩家熟悉一辆车的实际瞄准时间都是通过经验积累。
+亦即“玩得多了就熟悉了”。
