--- a/book/sneak-shot.adoc
+++ b/book/sneak-shot.adoc
@@ -50,7 +50,19 @@
 
 === 抓火控偷炮
 
-wha wha
+当你与目标进入对峙状态时，
+目标可能会由于某些原因（如注意力不集中，误操作等）
+做出不必要的机动（包括炮管胡乱指向，车体乱动），
+导致它的落弹环扩大。
+抓住这一敌方射击精度下降的时机，
+突然出击开火并缩回掩体，
+这样的技术动作我们就称其为抓火控偷炮。
+
+很明显，
+这一战术需要你的火控比对方优秀很多，
+特别是移动扩圈要足够小，
+才有可能在偷炮时有足够的火控优势，
+来不受反击地偷出这一炮的伤害。
 
 === 预瞄偷炮
 
@@ -68,12 +80,40 @@ wha wha
 那么开局时就可以籍此打出第一炮的优势。
 
 如果你的坦克是弹夹车，
-可以考虑将预瞄偷炮打成弹夹换血。
+可以考虑将预瞄偷炮打成link:#_弹夹换血[弹夹换血]。
 
 === 单草偷炮
 
-wha wha
+选取一个符合如下条件的草丛：
+
+- 在当前交战距离上，能提供足够的隐蔽，
+  确保自己开火前不会被点亮。
+
+- 能够攻击得到敌人。
+  亦即开进草丛之后，俯仰角与射界足够。
+
+- 草丛本身处于平缓的坡顶或掩体旁边，
+  开炮之后能够以硬掩体来保证自身安全。
+
+进入这样的草丛，精瞄射击攻击敌人，
+并缩回反斜面 / 掩体后避免被还击。
+这样一套技术动作就称作单草偷炮。
+
+.单草偷炮与草后狙击的关系
+单草偷炮与草后狙击的区别在于：
+草后狙击开火之后依然可以保持不被敌方点亮。
+而单草偷炮所使用的草丛未必能满足这一条件，
+亦即，开火时无法退出到草后 15 米以外，
+开火后必然会被点亮，
+需要你使用硬掩体来确保自身安全。
+
+如果你能花一点时间观察每个单草偷炮的周边地形，
+找到能够草后狙击的位置，
+那么就可以有效地提升自己的输出能力。
 
 === 偷炮后的安全考虑
 
-偷炮之后一定需要有可用的掩体。
+所有的偷炮技术动作都有确保瞄准与射击时安全的条件。
+但在偷炮动作结束后，
+敌方总是可以选择追上来强行进行 DPM 换血。
+你可以自行参考link:#_换血的条件[换血的条件]来确保自己后续的安全。
