--- a/book/snipe.adoc
+++ b/book/snipe.adoc
@@ -43,3 +43,24 @@
 这一战术允许你与目标处于更近的距离，
 允许你自行主动点亮目标，
 而不需要依赖队友的视野点亮。
+
+=== 草后狙击
+
+按照目前的点亮机制，
+开火瞬间，开火坦克 15 米内的草丛会无法为它提供隐蔽。
+开火坦克自身的隐蔽也会大幅度下降。
+而在开火之前主动退后，
+制造出多于 15 米的距离再开火，
+就可以继续享受草丛提供的隐蔽，
+从而不容易被敌方点亮。
+这一技术动作我们就称其为草后狙击。
+
+按照目前的游戏设定，
+当你开启狙击模式时，
+15 米以内的草丛会显示成半透明的样子。
+也可以通过某项游戏设置将其改为全透明。
+你可以用这个方法来判断自身与草丛的距离是否超过了 15 米。
+
+草后狙击只能在开火时继续保持草丛提供的隐蔽，
+坦克自身的隐蔽依然会下降。
+所以草后狙击并不能彻底保证开火后不被点亮。
