More on loader's skill level

--- a/book/sneak-shot.adoc
+++ b/book/sneak-shot.adoc
@@ -28,11 +28,16 @@
 
 影响坦克的装填时间的因素包括：
 
-- 装填手的熟练度
-- 装填手是否被击伤
-- 弹药架是否被击伤
-- 破釜沉舟（Adrenaline Rush）技能
-- 输弹机配件
+* 装填手的实际熟练度，具体包括如下因素：
+  ** 装填手自身熟练度
+  ** 车长熟练度 +车长熟练度 × 10%
+  ** 通风配件 +5%
+  ** 军粮补给 +10%
+  ** 兄弟连技能 +5%
+* 装填手是否被击伤
+* 弹药架是否被击伤
+* 破釜沉舟（Adrenaline Rush）技能
+* 输弹机配件
 
 坦克的装填时间越短，越容易使用/克制这一战术。
 装填时间越长，越容易被这一战术克制，需要在装填时依赖队友做火力掩护。
@@ -116,4 +121,4 @@
 所有的偷炮技术动作都有确保瞄准与射击时安全的条件。
 但在偷炮动作结束后，
 敌方总是可以选择追上来强行进行 DPM 换血。
-你可以自行参考link:#_换血的条件[换血的条件]来确保自己后续的安全。
+你可以参考link:#_换血的条件[换血的条件]来确保自己后续的安全。
