--- a/book/book.adoc
+++ b/book/book.adoc
@@ -1,6 +1,6 @@
 = 炮灰手册
-:author: Whyme Lyu
-:email: callme5long@gmail.com
+Whyme Lyu <callme5long@gmail.com>
+v0.2.0, 2015-03-16
 :doctype: book
 :toc:
 :sectanchors:
