Initial ver. of scouting

--- a/book/preparation.adoc
+++ b/book/preparation.adoc
@@ -1,5 +1,15 @@
 == 准备知识
 
+本着“理论指导实践”的原则，
+我们先来看看游戏自身的机制与数据，
+亦即“游戏规则”。
+也许你从其他一些攻略心得中学到了零散的游戏机制，
+但我在这里需要把我自己熟悉的数据来源分享出来，
+确保我们能站在同一起平台上对话，
+而不是抱着不同的字典来互相误解。
+
+这一章所提到的所有信息来源都可以在本书link:#_附录[附录]中找到网址。
+
 === 游戏机制
 
 游戏机制是指游戏内发生的所有事件的计算与判定方法。
