--- a/book/forword.adoc
+++ b/book/forword.adoc
@@ -62,6 +62,28 @@
 对于有了一定游戏经验的你来说读过了也是浪费时间。
 这都是意料之内的事情。
 
+=== 怎样阅读这本书
+
+最简单的方法当然是按照手册的自然顺序一章章地读下去。
+本书的内容顺序也是这样设计的。
+不过我知道读者们大多都很忙，
+希望会有某种节约时间的办法来尽快读完这本书。
+
+link:#_准备知识[准备知识]这一章请务必完整读完。
+你不必完整地把这一章所引用的外部资料全都读过，
+但至少要能做到：如果你有不明白 / 不确定的问题，
+能够从外部资料中很快地找到明确的，可靠的答案。
+
+从link:#_射击[射击]到link:#_侦察[侦察]这些章节探讨了基本的技术动作，
+你可以按照个人兴趣任意顺序浏览。
+甚至忽略掉某些章节也没问题。
+
+从link:#_定式[定式]这一章起我们开始用一些简单的实例来展示前面所讲述的技战术的实际应用与组合。
+基础薄弱的读者初读这一部分时可能会觉得较为陌生。
+但有了一定战场经验之后，
+你会从自己的录像和他人的视频里发现书中定式的即视感。
+到那时不妨再回来翻阅这一部分的文字吧。
+
 === 有关火炮
 
 我自己玩火炮的经验很少，
