--- a/book/preparation.adoc
+++ b/book/preparation.adoc
@@ -25,12 +25,12 @@
 （虽然游戏机制的更新并不频繁）。
 
 目前 Wargaming 披露游戏机制的主要渠道包括官方论坛，
-官方网站与官方 YouTube 频道。
-官方 wiki 的内容基本都是由玩家将各处官方资讯归纳总结而成。
+官方网站与link:{url-wg-youtube}[官方 YouTube 频道]。
+{url-wg-wiki}[官方 wiki] 的内容基本都是由玩家将各处官方资讯归纳总结而成。
 
 游戏机制的变动会在每个补丁的更新日志里写出。
-官方网站保存了每个历史版本的更新日志。
-官方 wiki 上面也同样保存了一份副本。
+官方网站保存了每个历史版本的link:{url-release-notes}[更新日志]。
+官方 wiki 上面也同样保存了一份link:{url-wiki-release-notes}[副本]。
 
 需要注意的是，每个版本上线之前，
 超测服务器和测试服务器上都会泄漏 / 提前放出一份测试版的更新日志。
@@ -56,6 +56,10 @@
 当你在网上遇到这些数据时，
 由于一般玩家未必具有实验科学的必备素质，
 最好不要轻易相信土法实验所得出的数据。
+
+目前在 PC 上最好的游戏数据查看软件是link:{url-tank-inspector}[装甲密档]。
+如果你更喜欢使用移动设备。
+安卓系统上的link:{url-android-kb-play}[坦克世界知识库]也是个不错的选择。
 
 === 地图知识
 
