--- a/book/shooting.adoc
+++ b/book/shooting.adoc
@@ -128,3 +128,10 @@
 虽然理论上我们可以通过坦克的移动扩圈和瞄准速度来计算瞄准所需的时间，
 但实际上玩家熟悉一辆车的实际瞄准时间都是通过经验积累。
 亦即“玩得多了就熟悉了”。
+
+=== 瞄准与开镜
+
+“开镜”是进入狙击模式的另一种称呼。
+一般来说开镜之后可以瞄得更精确。
+但由于人类的肌肉动作与反应时间的限制，
+开镜不可避免地要消耗时间。
