More on scouting and shooting

--- a/book/hp-trade.adoc
+++ b/book/hp-trade.adoc
@@ -56,7 +56,7 @@ DPM 的计算方式在社区中极为不统一。
 阅读他人的观点时要有所留意。
 
 与单发换血和 N 换 1 换血不同的是，
-DPM 换血的目的通常是将对手击毁。
+DPM 换血的目的通常是确保将对手击毁。
 而不是简单地打出一个“回合”的优势。
 
 === 弹夹换血
