--- a/book/scout.adoc
+++ b/book/scout.adoc
@@ -33,6 +33,13 @@
 只能依赖斜坡作为掩体来拉近双方距离。
 并且同时依赖斜坡来保证侦察车的自身安全。
 
+值得注意的是，
+因为侦察车在使用斜坡反斜面点亮敌人，
+那么被点亮的敌方车辆对于己方的支援火力而言可能也在反斜面之后。
+这样己方的直射火力未必能提供支援到，
+只能依赖火炮支援。
+如果能从侧翼点亮对手就不存在这一问题。
+
 === 草后静默
 
 草丛可以提供相当高的隐蔽系数。
@@ -42,17 +49,24 @@
 这种技术我们称其为草后静默。
 
 草后静默的主要适用场景与超视野点亮类似，
-都是需要点亮大片开阔地上可能出现的敌人。
+都适用于点亮大片开阔地上可能出现的敌人。
 但由于侦察车使用草丛为自己提供隐蔽，
 在敌人试图肉侦冲锋的时候会有余裕的时间和空间，
 等待队友的狙击火力将敌人消灭。
+
+但是话说回来，
+如果草丛的位置恰好在敌方进攻的路线上，
+亦即，敌人在被点亮时会逐渐接近侦察车，
+当距离拉近到一定程度时最终是会点亮侦察车的。
+很多经典的草后静默位置都是在敌人行军路线的侧翼点亮。
+安全性就会高很多。
 
 由于草丛可以提供的隐蔽很高，
 很多车辆（不只是轻坦）都可以胜任草后静默的工作。
 另玩家深恶痛绝的多台 TD 在大片草丛内深蹲，
 其实就是蹲在前面的敌人在做草后静默。
 
-=== 侦查与配件
+=== 侦察与配件
 
 有很多配件可以影响车辆的视野与隐蔽，
 从而影响着侦察战术的执行。
