--- a/book/scout.adoc
+++ b/book/scout.adoc
@@ -66,6 +66,13 @@
 另玩家深恶痛绝的多台 TD 在大片草丛内深蹲，
 其实就是蹲在前面的敌人在做草后静默。
 
+=== 肉侦
+
+在特定的战局下，
+肉侦也是一种可行的战术选择。
+不过在尝试肉侦肉侦之前，
+最好优先考虑一下其它的侦察战术是否可行。
+
 === 侦察与配件
 
 有很多配件可以影响车辆的视野与隐蔽，
@@ -118,7 +125,7 @@ TD 最多，LT 与 MT 次之，MT 与 SPG 最少。
 伪装网在侦察方面的意义比炮队镜更小。
 下面就是具体的分析。
 
-首先很明显：反斜面点亮无法发挥伪装网的作用。
+首先很明显：肉侦与反斜面点亮无法发挥伪装网的作用。
 草后静默战术是伪装网较为有用的情形，
 但仅限于敌方肉侦接近时才有意义。
 如果距离不够近，草丛提供的隐蔽往往已经很够用。
@@ -140,3 +147,5 @@ TD 最多，LT 与 MT 次之，MT 与 SPG 最少。
 但由于通风对车辆属性的实际影响太小，
 很难起到量变到质变的作用。
 这里我们也就不再展开讨论。
+实际上由于侦察车往往也要担负起一部分输出伤害的责任，
+你可以考虑把有限的配件位置留给其他优秀的配件。
