--- a/book/url.adoc
+++ b/book/url.adoc
@@ -1,10 +1,9 @@
-:url: http://whyme.neocities.org/
 :url-wg-wiki: http://wiki.wargaming.net/en/World_of_Tanks
 :url-wg-youtube: http://youtube.com/user/WorldOfTanksCom/
 :url-release-notes: http://worldoftanks.asia/zh-tw/content/release_notes/
 :url-wiki-release-notes: http://wiki.wargaming.net/en/Changelogs_for_World_of_Tanks_%28PC%29
-:url-tank-inspector: http://tankinspector.sinaapp.com/
+:url-tank-inspector: http://tankinspector.sinaapp.com
 :url-android-kb-play: https://play.google.com/store/apps/details?id=com.enigmapro.wot.knowlege&hl=en
 :url-android-kb-tieba: http://tieba.baidu.com/f?kw=%E5%9D%A6%E5%85%8B%E4%B8%96%E7%95%8C%E7%9F%A5%E8%AF%86%E5%BA%93
 :url-wotinfo: http://wotinfo.net/en/
-:url-home: http://whyme.neocities.org/
+:url-home: http://whyme.neocities.org
