Use <<...>> syntax for internal xref

--- a/book/introduction.adoc
+++ b/book/introduction.adoc
@@ -69,16 +69,16 @@
 不过我知道读者们大多都很忙，
 希望会有某种节约时间的办法来尽快读完这本书。
 
-link:#_准备知识[准备知识]这一章请务必完整读完。
+<<_准备知识>>这一章请务必完整读完。
 你不必完整地把这一章所引用的外部资料全都读过，
 但至少要能做到：如果你有不明白 / 不确定的问题，
 能够从外部资料中很快地找到明确的，可靠的答案。
 
-link:#_第二部分_战术[第二部分：战术]探讨了基本的技术动作，
+<<_第二部分_战术>>探讨了基本的技术动作，
 你可以按照个人兴趣任意顺序浏览。
 甚至忽略掉某些章节也没问题。
 
-在link:#_第三部分_定式[第三部分：定式]
+在<<_第三部分_定式>>
 中我们开始用一些简单的实例来展示前面所讲述的技战术的实际应用与组合。
 基础薄弱的读者初读这一部分时可能会觉得较为陌生。
 但有了一定战场经验之后，
