--- a/book/sneak-shot.adoc
+++ b/book/sneak-shot.adoc
@@ -85,7 +85,7 @@
 那么开局时就可以籍此打出第一炮的优势。
 
 如果你的坦克是弹夹车，
-可以考虑将预瞄偷炮打成link:#_弹夹换血[弹夹换血]。
+可以考虑将预瞄偷炮打成<<_弹夹换血>>。
 
 === 单草偷炮
 
@@ -121,4 +121,4 @@
 所有的偷炮技术动作都有确保瞄准与射击时安全的条件。
 但在偷炮动作结束后，
 敌方总是可以选择追上来强行进行 DPM 换血。
-你可以参考link:#_换血的条件[换血的条件]来确保自己后续的安全。
+你可以参考<<_换血的条件>>来确保自己后续的安全。
