--- a/book/introduction.adoc
+++ b/book/introduction.adoc
@@ -78,8 +78,7 @@
 你可以按照个人兴趣任意顺序浏览。
 甚至忽略掉某些章节也没问题。
 
-在<<_第三部分_定式>>
-中我们开始用一些简单的实例来展示前面所讲述的技战术的实际应用与组合。
+在<<_第三部分_定式>>中我们开始用一些简单的实例来展示前面所讲述的技战术的实际应用与组合。
 基础薄弱的读者初读这一部分时可能会觉得较为陌生。
 但有了一定战场经验之后，
 你会从自己的录像和他人的视频里发现书中定式的即视感。
