--- a/book/preparation.adoc
+++ b/book/preparation.adoc
@@ -4,8 +4,7 @@
 我们先来看看游戏自身的机制与数据，
 亦即“游戏规则”。
 也许你从其他一些攻略心得中学到了零散的游戏机制，
-但我在这里需要把我自己熟悉的数据来源分享出来，
-确保我们能站在同一起平台上对话，
+但我们在这里需要遵照同一份可靠的数据来源进行对话，
 而不是抱着不同的字典来互相误解。
 
 这一章所提到的所有信息来源都可以在本书<<_附录>>中找到网址。
