--- a/book/preparation.adoc
+++ b/book/preparation.adoc
@@ -7,7 +7,7 @@
 但我们在这里需要遵照同一份可靠的数据来源进行对话，
 而不是抱着不同的字典来互相误解。
 
-这一章所提到的所有信息来源都可以在本书<<_附录>>中找到网址。
+这一章所提到的所有信息来源都可以在本书附录：<<_外部资源>>中找到网址。
 
 === 游戏机制
 
